# barfoos

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  TODO  autogen.sh  barfoos.project  barfoos.workspace  barfoos.workspace.bjrn  barfoos.workspace.bjrn_paetzel  barfoos.workspace.session  configure.ac
assets/cells/: air  brick  carpet.red  default  dirt  door.right.closed  door.right.open  gate  lava  pillar  shooter  teleport  torch  torch2  torch3  water  wood
assets/effects/: buff.poison  curse.remove  heal.low  identify  item.dexterity  item.haste  item.strength  item.vitality  potion.water  strength
assets/entities/: arrow  box  deco.grass  deco.hanging_moss.small  item  particle  particle.bfw9k  particle.bubble  particle.rock  particle.teleport  player  projectile.bfw9k  projectile.test  slime  spider  torch  wizard
assets/features/: alcove  alcove_x  alcove_z  bridge  bridge_x  bridge_z  door  doorway  doorway_wood  doorway_x  doorway_x_wood  doorway_z  doorway_z_wood  drop  hallway  hallway.ladder  hallway.ladder.down  hallway.ladder.up  hallway_lava  hallway_small  living_quarters.0  mote  stairs_short  stairs_x_down  stairs_x_down_short  stairs_x_up  stairs_x_up_short  stairs_z_down  stairs_z_down_short  stairs_z_up  stairs_z_up_short  start  test
assets/items/: armor.1  barehand.1  barehand.player  boots.1  gem.earth  gem.fire  gem.life  gem.water  gem.wind  gold  helmet.1  key  lockpick  pants.1  potion.empty  potion.heal  potion.oil  potion.poison  potion.regen  potion.water  ring.haste  ring.light  ring.speed  ring.strength  scroll.identify  scroll.remove.curse  scroll.teleport  sword  torch  torch.burnt  wand.black  wand.empty
assets/shaders/: default.fs  default.vs  gui.fs  gui.vs
assets/spells/: spell.test
assets/text/: scrolls
cmake/: FindOggVorbis.cmake
doc/: cell.txt  effect.txt  entity.txt  feature.txt  ideas.txt  modifer.txt  spells.ods  xp.ods
src/: 2d.h  CMakeLists.txt  GLee.h  Makefile.am  Makefile.in  aabb.h  animation.h  audio.cc  audio.h  barfoos  barfoos.icns  cell.cc  cell.h  cellbase.h  cellproperties.cc  cellproperties.h  cellrender.cc  cellrender.h  checkincludes.sh  common.h  config.h  config.h.in  config.h.in~  cppcheck.txt  deserializer.cc  deserializer.h  effect.cc  effect.h  entity.cc  entity.h  entity.proto  feature.cc  feature.h  fileio.cc  fileio.h  game.cc  game.h  game.proto  gamestate.h  gfx.cc  (+93 more)
src/audio/: audio.cc  audio.h
src/barfoos.app/Contents/: Info.plist
src/barfoos.app/Contents/MacOS/: barfoos  barfoos.sh  libSystem.B.dylib  libgcc_s.1.dylib  libobjc.A.dylib  libogg.0.dylib  libopenal.1.dylib  libpng15.15.dylib  libstdc++.6.dylib  libvorbis.0.dylib  libvorbisfile.3.dylib  log.txt
src/barfoos.app/Contents/Resources/: log.txt
src/barfoos.app/Contents/assets/cells/: bars  bedrock  brick  brick.secret  default  dirt  ice  ladder.right  lava  pillar  rock  step  water
src/barfoos.app/Contents/assets/effects/: buff.regen  identify  item.light  item.speed
src/barfoos.app/Contents/assets/entities/: deco.grass  deco.hanging_moss.small  player  slime  torch  wizard
src/barfoos.app/Contents/assets/features/: alcove  door  hallway  hallway.ladder.down  hallway_lava  stairs_short
src/barfoos.app/Contents/assets/items/: armor.1  barehand.player  barehand.wizard  boots.1  gem.life  gem.wind  helmet.1  key  pants.1  potion.heal  potion.oil  potion.poison  potion.water  ring.haste  ring.light  scroll.remove.curse  sword  torch  torch.burnt
src/barfoos.app/Contents/assets/shaders/: default.fs  default.vs  gui.fs
src/barfoos.dSYM/Contents/: Info.plist
src/game/: game.cc  game.h
src/game/entities/: entity.cc  entity.h  mob.cc  monster.cc  monster.h  player.cc  projectile.cc  projectile.h
src/game/gameplay/: effect.cc  effect.h  spell.cc  spell.h  stats.cc  stats.h  trigger.cc
src/game/gamestates/: gamestate.h
src/game/gamestates/mainmenu/: mainmenugui.cc  mainmenugui.h  mainmenustate.cc  mainmenustate.h
src/game/gamestates/running/: runningstate.cc  runningstate.h
src/game/items/: inventory.cc  inventory.h  inventorygui.cc  inventorygui.h  item.cc  item.h  itementity.cc  itementity.h  itemproperties.cc  itemproperties.h
src/game/world/: feature.cc  feature.h  world.cc  world.h  worldbuilder.cc  worldbuilder.h  worldedit.cc  worldedit.h
src/game/world/cells/: cell.cc  cell.h  cellbase.h  cellproperties.cc  cellproperties.h  cellrender.cc  cellrender.h
src/gfx/: GLee.h  gfx.cc  gfx.h  gfxscreen.cc  gfxscreen.h  gfxview.cc  gfxview.h  shader.cc  shader.h  sprite.h  text.cc  text.h  texture.cc  texture.h  vertex.h  vertexbuffer.cc
src/gui/: gui.cc  gui.h
src/io/: fileio.cc  fileio.h  input.cc  input.h  properties.cc  properties.h
src/math/: 2d.h  aabb.h  ivector3.h  random.h  simplex.h  space.h  vector2.h  vector3.h
src/proto/: entity.proto  game.proto  runningstate.proto  world.proto
src/res/: res.rc  res.rc.in
src/templates/: floor.h  list.h
src/util/: animation.h  icolor.h  image.cc  image.h  log.cc  log.h  markov.h  profile.cc  profile.h  util.cc  util.h
tools/editor/BarfEd/: BarfEd.csproj  BarfEd.sln  MainWindow.cs  Program.cs  Widget.cs
tools/editor/BarfEd/Editors/: CellEditor.cs  CellFlags.cs  CellInfo.cs  Editors.csproj  InputTextDialog.cs  MyClass.cs  SideFlags.cs  TagWriter.cs  TextureSelection.cs  Vector3Editor.cs
tools/editor/BarfEd/Editors/Properties/: AssemblyInfo.cs
tools/editor/BarfEd/Editors/gtk-gui/: Editors.CellEditor.cs  Editors.InputTextDialog.cs  Editors.SideFlags.cs  Editors.TextureSelection.cs  Editors.Vector3Editor.cs  generated.cs  gui.stetic
tools/editor/BarfEd/Properties/: AssemblyInfo.cs
tools/editor/BarfEd/gtk-gui/: MainWindow.cs  gui.stetic
tools/editor/barfed/: CellEditor.cs
tools/editor/barfed/gtk-gui/: .cs  barfed.CellEditor.cs
tools/editor/barfed/widgets/: CellEditor.cs  MyClass.cs  widgets.csproj
tools/editor/barfed/widgets/Properties/: AssemblyInfo.cs
tools/editor/barfed/widgets/gtk-gui/: widgets.CellEditor.cs
